--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 }
 </script>
 </head>
-  <body class="bg-black text-white overflow-hidden h-screen selection:bg-pink-500 selection:text-white">
+  <body class="bg-black text-white overflow-hidden h-screen selection:bg-pink-500 selection:text-white" style="background-color: #000;">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
